# MagicCubeRobot

./: .gitignore  README.md
PCB部分/: 转接板.eprj
上位机部分(用于中继)/Widget_source_code/: WSocketTool.h  Widget.cpp  Widget.h  Widget.ui
单片机部分/MagicCubeRobot_STM32F407ZGT6_FreeRTOS_VScode_Project/: Makefile
可以跑在Windows电脑上的(不控制下位机)/: 工程说明文档.txt
可以跑在Windows电脑上的(不控制下位机)/Project/: Project.sln  Project.vcxproj  Project.vcxproj.filters  PropertySheet.props  WSocketTool.cpp  WSocketTool.h  bgrs.txt  debug.cpp  debug.h  main.cpp  tucube.cpp  tucube.h
开源解魔方软件/: 下载地址.txt
机械部分/: 35mm铜柱.SLDPRT  8mm光轴-用于同步轮.SLDPRT  上层平板.SLDPRT  下层平板.SLDPRT  使能开关.SLDPRT  同步轮大.SLDPRT  同步轮小.SLDPRT  四方薄螺母.SLDPRT  开关电源.SLDPRT  摄像头.SLDPRT  摄像头座.SLDPRT  摇杆.SLDPRT  显示屏.SLDPRT  显示屏固定架.SLDPRT  最终装配结构-屠文博2023年4月5日.SLDASM  树莓派4B.SLDPRT  步进电机驱动器.SLDPRT  电路板.SLDPRT  船形开关.SLDPRT  轴承座.SLDPRT  连杆.SLDPRT  限位开关.SLDPRT  限位开关支架-上部导轨.SLDPRT  限位开关支架-下面导轨.SLDPRT  限位开关支架-水平导轨.SLDPRT  魔方棒.SLDPRT  魔方棒长.SLDPRT  齿轮尺寸.txt
机械部分/42步进电机/: 42步进电机.SLDPRT  42步进电机同步轮.SLDPRT  42步进电机固定架.SLDPRT  42步进电机的轴.SLDPRT
机械部分/mark/: mark.SLDPRT
机械部分/上部导轨/: 8mm丝杆.SLDPRT  8mm光轴.SLDPRT  上部滑块.SLDPRT  上部端块.SLDPRT  光轴固定座.SLDPRT  步进电机端盖.SLDPRT  直线轴承.SLDPRT  贯穿式42丝杆步进电机.SLDPRT
机械部分/小滑轨/: 尺寸.txt  滑块.SLDPRT  (+1 more)
树莓派部分/MagicCubeRobot/: CMakeLists.txt  colorful.h  log.h  main.cpp
树莓派部分/MagicCubeRobot/docs/: README.txt  bgrs.txt  project_log.txt  user_manual.txt
树莓派部分/MagicCubeRobot/manual_mode/: README.txt  manual  manual.c  manual.h
树莓派部分/MagicCubeRobot/tucomm/: tucomm.c  tucomm.h
树莓派部分/MagicCubeRobot/tucube/: debug.cpp  debug.h  tucube.cpp  tucube.h
(+70 files in other folders)
